--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,7 +3,8 @@ name: Update WakaTime Stats
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'
+    # Runs at 00:00AM UTC
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
